# podcaster-rs

./: Cargo.toml  LICENSE  README.md  sample_podcasts.json  sample_podcasts.toml
src/: actions.rs  args.rs  common.rs  config.rs  download.rs  downloader.rs  episode.rs  main.rs  play.rs  podcast.rs  podcaster.rs  settings.rs  show_local.rs  show_remote.rs  state.rs
