[package]
name = "podcaster"
version = "0.1.0"
edition = "2021"
authors = ["Salil Wadnerkar <bsdprg@tuta.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.6.2"
toml = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
roxmltree = "0.18.0"
url = "2.4.0"
