[package]
name = "podcaster"
version = "0.1.0"
edition = "2021"
authors = ["Salil Wadnerkar <bsdprg@tuta.io>"]
keywords = ["unix", "podcast", "rss"]
license = "MIT"
categories = ["misc", "command-line-utilities"]
description = "download podcasts"
repository = "https://github.com/rohshall/podcaster-rs"
readme = "README.md"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20.0"
url = "2.5.2"
argh = "0.1.12"
colored = "2"
