[package]
name = "podcaster"
version = "0.1.0"
edition = "2021"
authors = ["Salil Wadnerkar <bsdprg@tuta.io>"]
keywords = ["unix", "podcast", "rss"]
license = "MIT"
categories = ["misc", "command-line-utilities"]
description = "download podcasts"
repository = "https://github.com/rohshall/podcaster-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
roxmltree = "0.20.0"
url = "2.5.2"
dirs = "5"
pico-args = "0.5.0"
colored = "2"
linya = "0.3.1"
